// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormPasswordInput component: * changes type of field on icon click: Icon after icon click 1`] = `
<div
  class="show-password-icon-container"
  data-testid="password-input-icon-container"
>
  <svg
    data-testid="password-input-icon-non-visible"
  >
    non-visible.svg
  </svg>
</div>
`;

exports[`FormPasswordInput component: * changes type of field on icon click: Icon before icon click 1`] = `
<div
  class="show-password-icon-container"
  data-testid="password-input-icon-container"
>
  <svg
    data-testid="password-input-icon-visible"
  >
    visible.svg
  </svg>
</div>
`;

exports[`FormPasswordInput component: * changes type of field on icon click: Icon before icon click 2`] = `
<div
  class="show-password-icon-container"
  data-testid="password-input-icon-container"
>
  <svg
    data-testid="password-input-icon-visible"
  >
    visible.svg
  </svg>
</div>
`;

exports[`FormPasswordInput component: * matches the snapshot: Password after before edit 1`] = `
<div
  class="form-password-input custom-class-name"
  data-testid="password-input-container"
>
  <label
    data-testid="password-input-label"
    for="test-1"
  >
    Test Input
  </label>
  <div
    class="input-with-icon-container"
  >
    <input
      data-testid="password-input"
      id="test-1"
      type="password"
      value="User typed here"
    />
    <div
      class="show-password-icon-container"
      data-testid="password-input-icon-container"
    >
      <svg
        data-testid="password-input-icon-visible"
      >
        visible.svg
      </svg>
    </div>
  </div>
</div>
`;

exports[`FormPasswordInput component: * matches the snapshot: Password input before edit 1`] = `
<div
  class="form-password-input custom-class-name"
  data-testid="password-input-container"
>
  <label
    data-testid="password-input-label"
    for="test-1"
  >
    Test Input
  </label>
  <div
    class="input-with-icon-container"
  >
    <input
      data-testid="password-input"
      id="test-1"
      type="password"
      value=""
    />
    <div
      class="show-password-icon-container"
      data-testid="password-input-icon-container"
    >
      <svg
        data-testid="password-input-icon-visible"
      >
        visible.svg
      </svg>
    </div>
  </div>
</div>
`;
